--- a/AIoT/templates/AIoT/detail.html
+++ b/AIoT/templates/AIoT/detail.html
@@ -7,6 +7,7 @@
 <style>
 #header_area {
   height: 60px;
+  display: block;
 }
 #header {
   font-family: sans-serif;
@@ -14,8 +15,8 @@
   font-weight: bold;
   margin-top: 10px;
   margin-bottom: 10px;
-  margin-left: 31%;
-  margin-right: 31%;
+  margin-left: 30%;
+  margin-right: 30%;
   display: inline;
 }
 .left {
@@ -36,6 +37,9 @@
   border-color: purple;
   /*display: inline-block;*/
   }
+#content_area {
+  display: block;
+}
 table {
   margin-top: 8px;
 }
@@ -47,6 +51,7 @@ vertical-align: top;
 color: black;
 background-color: darkgray;
 border: 1px solid black;
+font-size: 18px;
 }
 td{
 width: 100%;
@@ -97,8 +102,6 @@ border: 1px solid #b9b9b9;
   /*clear: left;*/
 }
 body{
-    /*background-color: rgba(90,250,80,0.3);*/
-    /*width:auto;*/
     background-color: mintcream;
   }
 #memo_area {
@@ -110,6 +113,9 @@ body{
   float: right;
   /*display: inline;*/
 }
+/*#footer_area {
+  display: block;
+}*/
 p.tabs
   {
     margin: 0px;
@@ -171,6 +177,7 @@ p.tabs
     <div class="left" y="30"></div>
     <p class="page-header" id="header" align="center"></p>
     <div class="right" y="30"></div></div><br>
+    <div id="content_area">
     <svg id="picture" width="400" height="440">
     <image id="zu1" x="0" y="0" width="100%" height="100%" opacity="1"></image>
     </svg>
@@ -188,6 +195,8 @@ p.tabs
     <div id="table_area" width=700 height=560>
       <p><font size="6px" color="blue">データまとめ</font></p>
     </div>
+    </div>
+    <!-- <div id="footer_area"></div> -->
     <script type="text/javascript">
     d3.select("#zu1").attr("xlink:href","/site_media/"+"zu1.jpg");
     d3.select("#header").text("{{datetime.year}}年 {{datetime.month}}月 {{datetime.day}}日");
@@ -226,7 +235,6 @@ function make_url() {
   var month = ("0"+"{{datetime.month}}").slice(-2);
   var day = ("0"+"{{datetime.day}}").slice(-2);
   var url = "{% url 'AIoT:detail_json' %}" + "?datetime=" + year + month + day;
-  console.log(url);
   return url;
 }
 
@@ -444,12 +452,17 @@ function make_link() {
     "id": "prev_day",
     "class": "btn btn-info btn-sm",
     "href": "{% url 'AIoT:detail' %}" + "?datetime=" + prev_dt,
-  }).text("前日");
+  }).text("< 前日");
   d3.select(".right").append("a").attr({
     "id": "next_day",
     "class": "btn btn-info btn-sm",
     "href": "{% url 'AIoT:detail' %}" + "?datetime=" + next_dt,
-  }).text("翌日");
+  }).text("翌日 >");
+  // d3.select("#footer_area").append("a").attr({
+  //   "id": "back_main",
+  //   "class": "btn btn-primary btn-block",
+  //   "href": "{% url 'AIoT:datalist' %}",
+  // }).text("メインページに戻る");
 }
 
 // データ
