--- a/AIoT/templates/AIoT/pict_list.html
+++ b/AIoT/templates/AIoT/pict_list.html
@@ -1,85 +1,260 @@
 
 {% extends "base.html" %}
 
-{% block title %}メインページ{% endblock title %}
+{% block title %}画像一覧{% endblock title %}
 
 {% block extrahead %}
 <style>
-h3 {
+#header_area {
+  height: 60px;
+  display: block;
+}
+#header {
   font-family: sans-serif;
   font-size: 30px;
   font-weight: bold;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  /*margin-left: 32%;*/
+  /*margin-right: 30%;*/
+  /*display: inline;*/
 }
-.container {
-  width: 1280px;
-  height: 5000px;
-  }
-table {
-  margin-top: 8px;
+.left {
+  float: left;
+  display: inline;
+  margin-top: 20px;
+}
+.right {
+  float: right;
+  display: inline;
+  /*margin-top: 20px;*/
 }
 body {
   background-color: mintcream;
+  overflow: scroll;
 }
 
-/*.zu1 {
-  height: 590px;
-  width: 430px;
-  border: 4px solid mistyrose;
-  margin-left: 1px;
-  margin-right: 1px;
-  background-color: white;
-}*/
 </style>
 {% endblock %}
 {% block content %}
-<svg class="zu1" id="svg1" width="100%" height="100%">
-</svg>
 <script type="text/javascript">
 
+//画面の表示サイズを確認
+var window_width = window.innerWidth;
+var window_height = window.innerHeight;
+
+d3.select("body").append("div").attr("id","header_area");
+d3.select("#header_area").append("div").attr({
+  "class":"page-header",
+  "id":"header",
+  "align":"center",
+  "margin-left": String(window_width/2)+"px"
+}).append("text").text("画像一覧");
+
+d3.select("#header_area").append("div").attr({
+  "class":"right",
+  "y":"30px",
+}).style("display","inline-flex");
+d3.select(".right").append("a").attr({
+    "id": "back_main",
+    "class": "btn btn-info btn-sm",
+    "href": "{% url 'AIoT:datalist' %}",
+    "display":"inline",
+    // "float":"right",
+  }).text("< メインページ");
+
+d3.select(".right").append("a").attr({
+    "id": "slide_show",
+    "class": "btn btn-success btn-sm",
+    "margin-left":"3px",
+    "onclick":"slide_show()",
+    "display":"inline",
+    // "float":"right",
+  }).text("スライドショー");
+
+function make_pict(){
+  window_width = window.innerWidth;
+  window_height = window_width * 2 / 3;
+  var images = document.getElementById('svg1');
+  images.textContent = null;
+  var svgArea = d3.select('#svg1');
+  var svgImgs = svgArea.selectAll().data(pict_list).enter().append("a").attr({
+    "href": function(d){return "{% url 'AIoT:detail' %}" + "?datetime=" +d;},
+  });
+  var row = document.row_form.row_select.value;
+  var column = Math.floor(pict_list.length/row+1);
+  // console.log(column);
+  svgImgs.append("image").attr({
+        "xlink:href":function (d){return "/site_media/"+d+".jpg";},
+        "opacity":"1",
+        "id": function(d){return d;},
+        'width' : String(window_width / row * 0.9)+"px",
+        'height' : String(window_height / row * 0.9)+"px",
+        "float" : "left",
+        "margin" : "auto",
+        "display": "block",
+        'x' : function (d, i) {
+          d3.select("#svg1").attr("width",window_width + "px");
+          return i%row * window_width / row + 10;},
+      "y" : function (d, i) {
+        d3.select("#svg1").attr("height",String((Math.floor(i/row)+1) * window_height / row + window_height / row)+"px");
+        return Math.floor(i/row) * (window_height / row * 1.1) + 50 ;},
+    });
+
+  svgImgs.append("text").text(function(d){return d})
+  .attr({
+    'x' : function (d, i) { return i%row * window_width / row + window_width / row / 3;},
+    "y" : function (d, i) { return Math.floor(i/row) * window_height / row * 1.1 + 50 + window_height / row; },
+    "font-size":function(d){return String(100/row)+"px"},
+  });
+}
+
+function slide_show() {
+
+  d3.select("#svg1").attr("display", "none");
+  window_width = window.innerWidth;
+  window_height = window.innerHeight;
+  d3.select("#slide").attr({
+    "x":String(window_width/2)+"px",
+    "y":String(window_height/2)+"px",
+    'width' : String(window_width*0.9)+"px",
+    'height' : String(window_height*0.9)+"px",
+  });
+  var tmp = d3.select("#slide").append("svg").attr({
+      'width' : String(window_width)+"px",
+      'height' : String(window_height)+"px",
+      "id": "slide_"+pict_list[cnt],
+  });
+  if (state_slide == "stop") {
+    state_slide = "start";
+    d3.select("#slide_show").attr("class","btn btn-default btn-sm");
+    tmp.append("image").attr({
+      "xlink:href":"/site_media/"+pict_list[cnt]+".jpg",
+      'width' : String(window_width)+"px",
+      'height' : String(window_height)+"px",
+      "margin" : "auto",
+    }).style("opacity",0)
+    .transition("open").duration(1500).style("opacity",1)
+    .transition("close").duration(1500).style("opacity",0);
+    cnt++;
+    show = setInterval(slide_open, 3200, pict_list[cnt]);
+  } else if (state_slide == "start"){
+    state_slide = "restart";
+    clearInterval(show);
+    d3.select("#slide_show").attr("class","btn btn-success btn-sm");
+    d3.select("#slide_"+pict_list[cnt]).attr("id","restart");
+    tmp.append("image").attr({
+      "xlink:href":"/site_media/"+pict_list[cnt]+".jpg",
+      'width' : String(window_width)+"px",
+      'height' : String(window_height)+"px",
+      "margin" : "auto",
+    }).style("opacity",1);
+  } else if (state_slide == "restart"){
+    d3.select("#restart").remove();
+    state_slide = "start";
+    d3.select("#slide_show").attr("class","btn btn-default btn-sm");
+    tmp.append("image").attr({
+      "xlink:href":"/site_media/"+pict_list[cnt]+".jpg",
+      'width' : String(window_width)+"px",
+      'height' : String(window_height)+"px",
+      "margin" : "auto",
+    }).style("opacity",0)
+    .transition("open").duration(1500).style("opacity",1)
+    .transition("close").duration(1500).style("opacity",0);
+    cnt++;
+    show = setInterval(slide_open, 3200, pict_list[cnt]);
+  }
+}
+
+function slide_open() {
+  console.log(state_slide);
+  if (state_slide == "start") {
+    if (cnt < pict_list.length) {
+      var tmp = d3.select("#slide").append("svg").attr({
+        'width' : String(window_width)+"px",
+        'height' : String(window_height)+"px",
+        "id": "slide_"+pict_list[cnt],
+      });
+      tmp.append("image").attr({
+        "xlink:href":"/site_media/"+pict_list[cnt]+".jpg",
+        'width' : String(window_width)+"px",
+        'height' : String(window_height)+"px",
+        "margin" : "auto",
+      }).style("opacity",0)
+      .transition("open").duration(1500).style("opacity",1)
+      .transition("close").duration(1500).style("opacity",0);
+      cnt++;
+    } else {
+      console.log("clear");
+      clearInterval(show);
+      document.getElementById('slide').textContent = null;
+      state_slide = "stop";
+      d3.select("#slide_show").attr("class","btn btn-success btn-sm");
+      cnt = 0;
+      d3.select("#svg1").attr("display", "block");
+    }
+  }
+}
+
+var state_slide = "stop";
+var cnt = 0, show;
+
+//写真の列数関連
+var rows = [2,3,4,5,6];
+var row_form = d3.select(".right").append("form").attr({
+  "name":"row_form",
+  "id":"row_form",
+  "float":"right",
+  "display":"inline",
+});
+var row_select = row_form.append("select").attr({
+  "name":"row_select",
+  "id":"row_select",
+});
+row_select.selectAll("rows").data(rows).enter().append("option").attr({
+  "id":function(d){return "rows"+d;},
+  "value":function(d){return d;},
+}).text(function(d){return d + "列";});
+
+d3.select("#row_form").append("a").attr({
+  "name":"row_reload",
+  "id":"row_reload",
+  "type":"button",
+  "onclick":"make_pict()",
+  "class":"btn btn-default btn-sm",
+}).text("決定");
+//初期列数を5に設定
+document.row_form.row_select.value = 5;
+
+//サーバより写真情報を収集
 var pict_list = []
 {% for i in pict_list %}
 pict_list.push({{i}})
 {% endfor %}
 
-var svgArea = d3.select('#svg1');
-                  // .append('svg')
-                  // .attr({
-                  //   'width': "100%",
-                  //   'height': "100%",
-                  // });
+d3.select("body").append("svg").attr({
+  "class":"zu1",
+  "id":"svg1",
+})
 
-var svgImgs = svgArea.selectAll().data(pict_list).enter().append("svg");
-svgImgs.append("image").attr({
-      "xlink:href":function (d){
-        return "/site_media/"+d+".jpg";
-      },
-      "opacity":"1",
-      "id": function(d){return d;},
-      'width' : "300px",
-      'height' : "200px",
-      "float" : "left",
-      "margin" : "auto",
-      "display": "block",
-      'x' : function (d, i) { return i%4 * 310;},
-      "y" : function (d, i) { return Math.floor(i/4) * 250 + 20 },
-    });
-
-svgImgs.append("text").text(function(d){return d})
-.attr({
-  'x' : function (d, i) { return i%4 * 310 + 75;},
-  "y" : function (d, i) { return Math.floor(i/4) * 250 + 250 },
-  "font-size":"30px",
-});
-
-// if (pict_list.length != 0){
-//   for (var i = 0; i < pict_list.length; i++){
-//     d3.select("#svg1").append("image").attr({
-//       "xlink:href":"/site_media/"+pict_list[i]+".jpg",
-//       "opacity":"1",
-//       "id": pict_list[i],
-//     });
-  // }
-// }
+console.log(pict_list.length);
+if (pict_list.length == 0){
+  d3.select("#svg1").attr("width",window_width + "px");
+  d3.select("#svg1").attr("height",window_height/2 + "px");
+  var msg = d3.select("#svg1").append("svg").attr({
+    // 'height': 500,
+    "x":String(window_width)+"px",
+    "y":String(window_height/4)+"px",
+  });
+  msg.append("text").text("画像がありません").attr({
+    "font-size":"100px",
+    // "x":"0px",
+    "y":String(window_height/6)+"px",
+  })
+} else {
+  make_pict();
+  d3.select("body").append("svg").attr("id","slide");
+}
 
 </script>
 
