--- a/AIoT/templates/AIoT/detail.html
+++ b/AIoT/templates/AIoT/detail.html
@@ -34,7 +34,7 @@
   background-color: white;
   border-width: 0px 4px;
   border-style: ridge;
-  border-color: purple;
+  border-color: black;
   /*display: inline-block;*/
   }
 #content_area {
@@ -98,8 +98,8 @@ border: 1px solid #b9b9b9;
 #picture {
   float: left;
   /*display: block;*/
-  border: 3px solid green;
-  background-color: green;
+  border: 3px solid black;
+  /*background-color: black;*/
   /*position: absolute;*/
   /*clear: left;*/
 }
@@ -495,7 +495,7 @@ function make_link() {
   }).text("翌日 >");
   d3.select("#footer_area").append("a").attr({
     "id": "back_main",
-    "class": "btn btn-primary btn-block",
+    "class": "btn btn-info btn-block",
     "href": "{% url 'AIoT:datalist' %}",
   }).text("メインページに戻る");
 }
