--- a/AIoT/templates/AIoT/datalist.html
+++ b/AIoT/templates/AIoT/datalist.html
@@ -197,6 +197,7 @@ td {
     <form name="threshold_form" action="Sample.html">
       <textarea id="threshold" name="threshold"></textarea><br>
       <a id="threshold_write_button" onclick="threshold_write()" class="btn btn-info btn-block">更新</a>
+      <a id="water_control_button" onclick="water_control()" class="btn btn-info btn-block">水遣りスタート</a>
     </form>
   </div>
   </div>
@@ -256,6 +257,27 @@ td {
       });
     }
   }
+  //水やりの命令を管理する関数
+  function water_control() {
+    flag_water = !flag_water;
+    if (flag_water) {
+      $.ajax({
+        type: 'GET',
+        url: make_url("water") + "?water=ON",
+        dataType: 'json',
+      });
+      d3.select("#water_control_button").text("水遣りストップ");
+      water = setTimeout(water_control, 11000);
+    } else{
+      $.ajax({
+        type: 'GET',
+        url: make_url("water") + "?water=OFF",
+        dataType: 'json',
+      });
+      d3.select("#water_control_button").text("水遣りスタート");
+      clearTimeout(water);
+    }
+  }
   //データベースのメモ・閾値を表示
   function db_get() {
     var memo_text = "";
@@ -282,11 +304,15 @@ function make_url(str) {
     var url = "{% url 'AIoT:memo_json' %}" + "?datetime=" + year + month + day;
   } else if (str == "threshold") {
     var url = "{% url 'AIoT:threshold_json' %}";
+  } else if (str == "water") {
+    var url = "{% url 'AIoT:water_json' %}";
   }
   return url;
 }
 
 db_get();
+var water;
+var flag_water = false;
 </script>
 
 <script type="text/javascript">
